# naukri-profile-updater

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh
naukri_updater/: __init__.py  __main__.py  auth.py  browser.py  config.py  dashboard.py  logger.py  notifications.py  profile.py  scheduler.py  selectors.py
naukri_updater/static/: style.css
naukri_updater/templates/: index.html
tests/: conftest.py  test_auth.py  test_config.py  test_notifications.py  test_selectors.py
