[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naukri-profile-updater"
version = "1.0.0"
description = "Automated Naukri.com profile updater to keep your profile fresh and visible to recruiters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "schedule>=1.2",
    "requests>=2.31",
    "flask>=3.0",
]

[project.scripts]
naukri-updater = "naukri_updater.__main__:main"
naukri-dashboard = "naukri_updater.dashboard:run_dashboard"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
include = ["naukri_updater*"]
